--- a/test/sample/app/project1/webapp/index.html
+++ b/test/sample/app/project1/webapp/index.html
@@ -25,7 +25,7 @@
         <script src="https://ui5.sap.com/test-resources/sap/ushell/bootstrap/sandbox.js"></script>
         <script
             src="https://ui5.sap.com/resources/sap-ui-core.js"
-            data-sap-ui-libs="sap.m, sap.ushell, sap.fe.templates"
+            data-sap-ui-libs="sap.m, sap.ui.core, sap.ushell, sap.fe.templates"
             data-sap-ui-compatVersion="edge"
             data-sap-ui-theme="sap_fiori_3"
             data-sap-ui-frameOptions="allow"
